<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <Button
            android:id="@+id/upload_image"
            android:layout_width="351dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:background="@drawable/upload_image"
            app:layout_constraintBottom_toTopOf="@id/name_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />


        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/sum_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upload_image">

            <TextView
                android:id="@+id/field_donation_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_donation_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/example_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:background="@drawable/form_background"
                    android:hint="@string/example_donation_name" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sum_layout"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/aim_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_layout">

            <TextView
                android:id="@+id/field_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_target_sum" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/example_sum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:background="@drawable/form_background"
                    android:hint="@string/example_target_sum"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/aim_layout"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/descr_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sum_layout">

            <TextView
                android:id="@+id/field_aim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_aim" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/example_aim"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_background"
                    android:hint="@string/example_target_aim" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/descr_layout"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/money_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aim_layout">

            <TextView
                android:id="@+id/field_descr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_descr" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/example_descr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:background="@drawable/form_background2"
                    android:hint="@string/example_descr" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/money_layout"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/author_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descr_layout">

            <TextView
                android:id="@+id/field_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_money" />

            <Spinner
                android:id="@+id/money_spinner"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/spinner" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/author_layout"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/money_layout"
            tools:visibility="gone">

            <TextView
                android:id="@+id/field_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_author" />

            <Spinner
                android:id="@+id/author_spinner"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/spinner" />
        </LinearLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="351dp"
            android:layout_height="44dp"
            android:background="@drawable/next_button"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/author_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>